# app

./: CLAUDE.md
.github/workflows/: check-logs.yml  ci.yml  deploy.yml  fix-oidc-trust.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/application/: ports.rs
backend/src/application/use_cases/: auth.rs  checkout.rs  email_verification.rs  manage_pricing.rs  mod.rs  password_reset.rs  process_lead.rs  quote_history.rs  webhook.rs
backend/src/domain/: entities.rs  mod.rs  quota.rs  value_objects.rs
backend/src/infrastructure/: ai_client.rs  mod.rs  mongo_store.rs  ses_client.rs  stripe_client.rs
backend/src/presentation/: handlers.rs  mod.rs  validation.rs
docs/: CNAME  SPECIFICATION.md  index.html  pricing.html
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.smoke.config.ts
frontend/e2e/: auth.spec.ts  choose-plan.spec.ts  dashboard.spec.ts  error-boundary.spec.ts  forgot-password.spec.ts  helpers.ts  new-quote.spec.ts  pricing-setup.spec.ts  verify-email.spec.ts
frontend/e2e-smoke/: login-flow.spec.ts  pricing-setup.spec.ts  quote-generation.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/application/: api.ts  auth.ts  file-utils.ts
frontend/src/domain/: countries.ts  (+2 more)
infra/cloudformation/: amplify.yaml  backend.yaml
plans/: 001-custom-domains.md  002-email-routing.md  003-payments-stripe.md  004-quote-history.md  005-usage-quota.md  006-rate-limiting.md  007-password-reset.md  008-email-verification.md  009-input-validation.md  010-error-boundaries.md  011-monitoring.md  012-subscription-gating.md
(+24 files in other folders)
