[package]
name = "tidy-quote-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dev-server"
path = "src/bin/dev_server.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mongodb = { version = "3", features = ["rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lambda_http = "0.13"
lambda_runtime = "0.13"
base64 = "0.22"
async-trait = "0.1"
actix-web = "4"
actix-cors = "0.7"
jsonwebtoken = "9"
bcrypt = "0.17"
dotenv = "0.15"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aws-config = "1"
aws-sdk-sesv2 = "1"
futures = "0.3"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
